--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.19.4",
     "@clerk/themes": "^2.2.45",
     "@lexical/react": "^0.31.1",
+    "@lexical/rich-text": "^0.31.1",
     "@lexical/selection": "^0.31.1",
     "@lexical/utils": "^0.31.1",
     "@liveblocks/client": "^2.24.2",
